nav gap BUG

--- a/src/assets/styles/index.module.scss
+++ b/src/assets/styles/index.module.scss
@@ -11,6 +11,7 @@
   orientation: portrait;
   height: -webkit-fill-available;
   // background-image: url('/src/assets/images/backgroundImg2.jpg');
+  background-color: rgb(9, 21, 63);
 }
 
 .navBar {
